[package]
name = "plua"
version = "1.0.1"
edition = "2024"
authors = ["vyPal"]
description = "Write plugins for the Pumpkin MC Server software in Lua"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-plugin-api" }
tracing = "0.1"
piccolo = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.9.1"

[profile.release]
lto = true
